--- a/www/index.html
+++ b/www/index.html
@@ -11,19 +11,34 @@
   <link rel="stylesheet" href="components/loader.css">
   <link rel="stylesheet" href="lib/bootstrap-4.6.0-dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
-
-  <script>
-    ons.ready(function() {
-      console.log("Onsen UI is ready!");
-    });
-
-    if (ons.platform.isIPhoneX()) {
-      document.documentElement.setAttribute('onsflag-iphonex-portrait', '');
-      document.documentElement.setAttribute('onsflag-iphonex-landscape', '');
-    }
-  </script>
 </head>
 <body>
-  This is a template for Onsen UI app.
+  <div class="container">
+     <div class="row">
+      <div class="col-sm">
+        <h3> Plugins </h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm">
+        <button class="btn btn-primary btn-block" id="alerta"> Alerta </button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm">
+        <button class="btn btn-primary btn-block" id="confirm"> Confirm </button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm">
+        <button class="btn btn-primary btn-block" id="beep"> Beep </button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm">
+        <button class="btn btn-primary btn-block" id="vibrar"> Vibrar </button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
